# game-quote-inline-tgbot

./: .env.example  .gitignore  .simple_env  Dockerfile  Makefile  README.md  docker-compose.yml  flake.nix  pyproject.toml  quotes.json  quotes_schema.json
quotebot/: config.py  main.py
scripts/: dota2Info.py
src/: app.py  config.py
