[project]
name = "game-quote-inline-tgbot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Wizard1209", email = "wizard1209@pm.me" }]
dependencies = ["aiogram>=3.4.1", "pydantic-settings>=2.2.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = "ruff ."
fmt = "ruff format ."

[tool.pdm.dev-dependencies]
lint = ["ruff>=0.2.2", "mypy>=1.8.0"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.isort]

[tool.mypy]
plugins = ["pydantic.mypy"]
