[project]
name = "game-quote-inline-tgbot"
version = "0.2.0"
description = "Telegram bot for audio/voice quotes"
authors = [{ name = "Wizard1209", email = "wizard1209@pm.me" }]
dependencies = ["aiogram>=3.4.1", "pydantic-settings>=2.2.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
fmt = "ruff format ."
lint = "ruff check ."
types = "mypy --strict quotebot"
all = {composite = ["fmt", "lint", "types"]}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.2",
    "mypy>=1.8.0",
]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
indent-style = "space"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
strict = true
